elegancka prezentacja, error 4%

--- a/demo.ipynb
+++ b/demo.ipynb
@@ -2,20 +2,11 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Couldn't import dot_parser, loading of dot files will not be possible.\n",
-      "... loading data\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import numpy\n",
     "\n",
@@ -28,7 +19,7 @@
     "img_proc = dp.ImageProcessing(rng, image_shape=(28, 28), cropped_image_shape=(26, 26))\n",
     "\n",
     "# model\n",
-    "model = LearningModel(rng, n_units=(20, 50, 10), input_shape=(26, 26),\n",
+    "model = LearningModel(rng, img_proc, n_units=(20, 50, 10), input_shape=(26, 26),\n",
     "                      learning_rate=0.01, L1_reg=0.001, L2_reg=0.001, rmsprop=True)\n",
     "\n",
     "# download MNIST dataset to current directory\n",
@@ -39,13 +30,56 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
     "# train model with given parameters (and with high verbosity)\n",
-    "model.train(dataset, n_epochs=50, batch_size=500, image_processing=img_proc, verbose=True)"
+    "# NOTE: setting n_epochs to e.g. 40 will give lower error rate, but it will obviously take more time\n",
+    "model.train(dataset, n_epochs=10, batch_size=500, verbose=False)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "# Results\n",
+    "import matplotlib.pyplot as plt\n",
+    "import matplotlib.image as mpimg\n",
+    "import numpy as np\n",
+    "\n",
+    "def show(image):\n",
+    "    plt.imshow(image[0], cmap=plt.cm.gray)\n",
+    "    plt.show()\n",
+    "\n",
+    "test_set_x, test_set_y = dataset[2]\n",
+    "\n",
+    "# choose 10 random images from test set\n",
+    "num = 20\n",
+    "idxs = rng.randint(0, test_set_x.shape[0], (num,))\n",
+    "tested_x = test_set_x[idxs]\n",
+    "tested_y = test_set_y[idxs]\n",
+    "y_pred = model.predict(tested_x)\n",
+    "\n",
+    "%matplotlib inline\n",
+    "\n",
+    "for x, y, yp in zip(tested_x, tested_y, y_pred):\n",
+    "    print 'Predicted %i, should be %i:' % (yp, y)\n",
+    "    show(x)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
