--- a/demo.ipynb
+++ b/demo.ipynb
@@ -35,8 +35,8 @@
    "outputs": [],
    "source": [
     "# train model with given parameters (and with high verbosity)\n",
-    "# NOTE: setting n_epochs to e.g. 40 will give lower error rate, but it will obviously take more time\n",
-    "model.train(dataset, n_epochs=10, batch_size=500, verbose=False)"
+    "# NOTE: setting n_epochs to e.g. 10 will lower the error rate, but 3 is good enough for demonstration\n",
+    "ret = model.train(dataset, n_epochs=3, batch_size=500, verbose=True)"
    ]
   },
   {
@@ -48,26 +48,44 @@
    "outputs": [],
    "source": [
     "# Results\n",
-    "import matplotlib.pyplot as plt\n",
-    "import matplotlib.image as mpimg\n",
     "import numpy as np\n",
+    "\n",
+    "test_set_x, test_set_y = dataset[2]\n",
+    "\n",
+    "# get predictions for 1 test batch\n",
+    "test_batch = 50\n",
+    "tested_x = test_set_x[:test_batch]\n",
+    "tested_y = test_set_y[:test_batch]\n",
+    "y_pred = model.predict(tested_x)\n",
+    "\n",
+    "correct = np.equal(y_pred, tested_y).sum()\n",
+    "\n",
+    "print 'Predictions:  ', y_pred\n",
+    "print 'Expectations: ', tested_y\n",
+    "print '%i out of %i predictions are correct (%i %%)' % (correct, test_batch, 100 * correct / test_batch)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "# Show random 10 images\n",
+    "import matplotlib.pyplot as plt\n",
     "\n",
     "def show(image):\n",
     "    plt.imshow(image[0], cmap=plt.cm.gray)\n",
     "    plt.show()\n",
     "\n",
-    "test_set_x, test_set_y = dataset[2]\n",
-    "\n",
-    "# choose 10 random images from test set\n",
-    "num = 20\n",
-    "idxs = rng.randint(0, test_set_x.shape[0], (num,))\n",
-    "tested_x = test_set_x[idxs]\n",
-    "tested_y = test_set_y[idxs]\n",
-    "y_pred = model.predict(tested_x)\n",
+    "num = 10\n",
+    "idxs = rng.randint(0, tested_x.shape[0], (num,))\n",
     "\n",
     "%matplotlib inline\n",
     "\n",
-    "for x, y, yp in zip(tested_x, tested_y, y_pred):\n",
+    "for x, y, yp in zip(tested_x[idxs], tested_y[idxs], y_pred[idxs]):\n",
     "    print 'Predicted %i, should be %i:' % (yp, y)\n",
     "    show(x)\n"
    ]
