--- a/demo.ipynb
+++ b/demo.ipynb
@@ -8,6 +8,7 @@
    },
    "outputs": [],
    "source": [
+    "# Load dataset and initialize learning model\n",
     "import numpy\n",
     "\n",
     "import data_preparation as dp\n",
@@ -23,14 +24,18 @@
     "                      learning_rate=0.01, L1_reg=0.001, L2_reg=0.001, rmsprop=True)\n",
     "\n",
     "# download MNIST dataset to current directory\n",
-    "dataset = dp.load_mnist()"
+    "dataset = dp.load_mnist()\n",
+    "\n",
+    "print 'Training set count:', dataset[0][0].shape[0]\n",
+    "print 'Validation set count:', dataset[1][0].shape[0]\n",
+    "print 'Test set count:', dataset[2][0].shape[0]"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -43,7 +48,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -69,7 +74,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -87,7 +92,7 @@
     "\n",
     "for x, y, yp in zip(tested_x[idxs], tested_y[idxs], y_pred[idxs]):\n",
     "    print 'Predicted %i, should be %i:' % (yp, y)\n",
-    "    show(x)\n"
+    "    show(x)"
    ]
   },
   {
